Remove fixed heights and add flexbox to fix overflow issue

--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -1,7 +1,7 @@
 .profile {
     background-color: #133667 !important;
     text-align: center;
-    height: 320px;
+    min-height: 320px;
     margin-bottom: 50px;
     h1 {
         font-size: 50px;
@@ -13,14 +13,20 @@
         border-radius: 50%;
         max-width: 100%;
         max-height: 100%;
-        margin-left: auto;
-        margin-right: auto;
         display: inline;        
         padding: 20px;
     }
     
     .profile-picture {
         margin-bottom: 30px;
-        height: 200px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        img {
+            flex: 1 0 50%; // 50% basis: 2 columns small screen
+            min-width: 100px;
+            max-width: 200px;
+        }
     }
 }
